<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_pqrs"
            android:icon="@drawable/ic_pqrs_black_24dp"
            android:title="@string/menu_pqrs" />
        <item
            android:id="@+id/nav_reservation"
            android:icon="@drawable/ic_reservation_black_24dp"
            android:title="@string/menu_reservations" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_payment_black_24dp"
            android:title="@string/menu_payment" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_black_24dp"
            android:title="@string/menu_logunt" />
    </group>


</menu>
