<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_dark"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="44dp"
            android:layout_marginRight="44dp"
            android:contentDescription="@string/descrip_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon1" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:backgroundTint="#ffffff"
            android:ems="10"
            android:hint="@string/input_correo"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/background_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:backgroundTint="#ffffff"
            android:ems="10"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:textColorHint="@android:color/background_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/button_rounded_stroke"
            android:onClick="apiGet"
            android:text="@string/boton_regis"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/button_rounded"
            android:onClick="login"
            android:text="@string/boton_login"
            android:textColor="@android:color/background_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_media"
            android:contentDescription="@string/descrip_fb"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            app:srcCompat="@drawable/fb" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_media"
            android:contentDescription="@string/descrip_go"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            app:srcCompat="@drawable/go" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_media"
            android:contentDescription="@string/descrip_tw"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            app:srcCompat="@drawable/tw" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>